re intrd-1392 (510 branch)