@@ -17,9 +17,6 @@
  */
 package org.meveo.admin.job;
 
-import static org.apache.commons.lang3.StringUtils.isEmpty;
-
-import java.util.Arrays;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
@@ -128,8 +125,8 @@ public class SepaDirectDebitJobBean extends BaseJobBean {
 	public void execute(JobExecutionResultImpl result, JobInstance jobInstance) {
 
 		try {
-			Long nbRuns = new Long(1);
-			Long waitingMillis = new Long(0);
+			Long nbRuns = Long.valueOf(1);
+			Long waitingMillis = Long.valueOf(0);
 
 			try {
 				nbRuns = (Long) this.getParamOrCFValue(jobInstance, "SepaJob_nbRuns");
@@ -139,10 +136,11 @@ public class SepaDirectDebitJobBean extends BaseJobBean {
 				}
 
 			} catch (Exception e) {
-				nbRuns = new Long(1);
-				waitingMillis = new Long(0);
-				log.warn("Cant get nbRuns and waitingMillis customFields for " + jobInstance.getCode(), e.getMessage());
+				nbRuns = Long.valueOf(1);
+				waitingMillis = Long.valueOf(0);
+				log.warn("Cant get nbRuns and waitingMillis customFields for {}", jobInstance.getCode(), e.getMessage());
 			}
+			
 			DDRequestBuilder ddRequestBuilder = null;
 			Seller seller = null;
 			String ddRequestBuilderCode = null;
@@ -166,8 +164,7 @@ public class SepaDirectDebitJobBean extends BaseJobBean {
 			List<DDRequestLotOp> ddrequestOps = dDRequestLotOpService.getDDRequestOps(ddRequestBuilder, seller, paymentOrRefundEnum);
 
 			if (CollectionUtils.isNotEmpty(ddrequestOps)) {
-				log.info("ddrequestOps found:" + ddrequestOps.size());
-				result.setNbItemsToProcess(ddrequestOps.size());
+				log.info("ddrequestOps found: {}", ddrequestOps.size());				
 
 			} else {
 				final String msg = "ddrequestOps IS EMPTY !";
@@ -177,37 +174,32 @@ public class SepaDirectDebitJobBean extends BaseJobBean {
 				return;
 			}
 
+			
 			for (DDRequestLotOp ddrequestLotOp : ddrequestOps) {
 				if (!jobExecutionService.isJobRunningOnThis(result.getJobInstance().getId())) {
 					break;
 				}
+								
 				try {
 					DateRangeScript dateRangeScript = this.getDueDateRangeScript(ddrequestLotOp);
 					if (dateRangeScript != null) { // computing custom due date range :
 						this.updateOperationDateRange(ddrequestLotOp, dateRangeScript);
 					}
 					if (ddrequestLotOp.getDdrequestOp() == DDRequestOpEnum.CREATE) {
-						log.info("start filterAoToPayOrRefund...");
 						List<AccountOperation> listAoToPay = this.filterAoToPayOrRefund(ddRequestBuilderInterface, jobInstance, ddrequestLotOp);
-						log.info("end filterAoToPayOrRefund listAoToPay.size:" + listAoToPay.size());
 						DDRequestLOT ddRequestLOT = dDRequestLOTService.createDDRquestLot(ddrequestLotOp, listAoToPay, ddRequestBuilder, result);
-						log.info("end createDDRquestLot");
+						ddRequestLOT.setFileName(ddRequestBuilderInterface.getDDFileName(ddRequestLOT, appProvider));
 						if (ddRequestLOT != null && "true".equals(paramBeanFactory.getInstance().getProperty("bayad.ddrequest.split", "true"))) {
+
 							dDRequestLOTService.addItems(ddrequestLotOp, ddRequestLOT, listAoToPay, ddRequestBuilder, result);
-							log.info("end addItems");
-							dDRequestLOTService.generateDDRquestLotFile(dDRequestLOTService.findById(ddRequestLOT.getId(), Arrays.asList("ddrequestItems") ), ddRequestBuilderInterface, appProvider);
-							log.info("end generateDDRquestLotFile");
-							result.addReport(ddRequestLOT.getRejectedCause());
-							dDRequestLOTService.createPaymentsOrRefundsForDDRequestLot(ddRequestLOT, nbRuns, waitingMillis, result);
-							log.info("end createPaymentsOrRefundsForDDRequestLot");
-							if (isEmpty(ddRequestLOT.getRejectedCause())) {
-								result.registerSucces();
-							}
+						    dDRequestLOTService.createPaymentsOrRefundsAndGenerateDDRequestLotFile(ddRequestLOT, ddRequestBuilderInterface, ddrequestLotOp, nbRuns, waitingMillis, result);
 						}
 					}
 					if (ddrequestLotOp.getDdrequestOp() == DDRequestOpEnum.PAYMENT) {
-						dDRequestLOTService.createPaymentsOrRefundsForDDRequestLot(ddrequestLotOp.getDdrequestLOT(), nbRuns, waitingMillis, result);
-						result.registerSucces();
+
+							dDRequestLOTService.createPaymentsOrRefundsForDDRequestLot(ddrequestLotOp.getDdrequestLOT(), nbRuns, waitingMillis, result);
+							result.registerSucces();
+
 					}
 					if (ddrequestLotOp.getDdrequestOp() == DDRequestOpEnum.FILE) {
 						dDRequestLOTService.generateDDRquestLotFile(ddrequestLotOp.getDdrequestLOT(), ddRequestBuilderInterface, appProvider);
@@ -229,6 +221,7 @@ public class SepaDirectDebitJobBean extends BaseJobBean {
 					result.registerError(ddrequestLotOp.getId(), e.getMessage());
 					result.addReport("ddrequestLotOp id : " + ddrequestLotOp.getId() + " RejectReason : " + e.getMessage());
 				}
+				
 			}
 		} catch (Exception e) {
 			log.error("Failed to sepa direct debit", e);
@@ -268,25 +261,29 @@ public class SepaDirectDebitJobBean extends BaseJobBean {
      * @param ddrequestLotOp the ddrequest lot op
      * @return the due date range script
      */
-    private DateRangeScript getDueDateRangeScript(DDRequestLotOp ddrequestLotOp) {
-        try {
-            ScriptInstance scriptInstance = ddrequestLotOp.getScriptInstance();
-            if (scriptInstance != null) {
-            	 scriptInstance = scriptInstanceService.retrieveIfNotManaged(scriptInstance);
-                final String scriptCode = scriptInstance.getCode();
-                if (scriptCode != null) {
-                    log.debug(" looking for ScriptInstance with code :  [{}] ", scriptCode);
-                    ScriptInterface si = scriptInstanceService.getScriptInstance(scriptCode);
-                    if (si != null && si instanceof DateRangeScript) {
-                        return (DateRangeScript) si;
-                    }
-                }
-            }
-        } catch (Exception e) {
-            log.error(" Error on getDueDateRangeScript : [{}]", e.getMessage());
-        }
-        return null;
-    }
+	private DateRangeScript getDueDateRangeScript(DDRequestLotOp ddrequestLotOp) {
+		try {
+			ScriptInstance scriptInstance = ddrequestLotOp.getScriptInstance();
+			scriptInstance = scriptInstanceService.refreshOrRetrieve(scriptInstance);
+			if (scriptInstance != null) {
+
+				scriptInstance = scriptInstanceService.retrieveIfNotManaged(scriptInstance);
+				final String scriptCode = scriptInstance.getCode();
+				if (scriptCode != null) {
+					if (log.isDebugEnabled()) {
+						log.debug(" looking for ScriptInstance with code :  [{}] ", scriptCode);
+					}
+					ScriptInterface si = scriptInstanceService.getScriptInstance(scriptCode);
+					if (si instanceof DateRangeScript) {
+						return (DateRangeScript) si;
+					}
+				}
+			}
+		} catch (Exception e) {
+			log.error(" Error on getDueDateRangeScript", e);
+		}
+		return null;
+	}
 
     /**
      * Creates a new DDRequestLotOp instance, using the initial one's informations. <br>
@@ -328,8 +325,7 @@ public class SepaDirectDebitJobBean extends BaseJobBean {
 	private List<AccountOperation> filterAoToPayOrRefund(DDRequestBuilderInterface ddRequestBuilderInterface, JobInstance jobInstance, DDRequestLotOp ddRequestLotOp) {
 		AccountOperationFilterScript aoFilterScript = this.getAOScriptInstance(jobInstance);
 		if (aoFilterScript != null) {
-			Map<String, Object> methodContext = new HashMap<>();
-			methodContext.put(AccountOperationFilterScript.DD_REQ_OP, ddRequestLotOp);
+			Map<String, Object> methodContext = new HashMap<>();				
 			 methodContext.put(AccountOperationFilterScript.FROM_DUE_DATE, ddRequestLotOp.getFromDueDate());
 			 methodContext.put(AccountOperationFilterScript.TO_DUE_DATE, ddRequestLotOp.getToDueDate());
 			 methodContext.put(AccountOperationFilterScript.PAYMENT_METHOD, PaymentMethodEnum.DIRECTDEBIT);
@@ -355,9 +351,11 @@ public class SepaDirectDebitJobBean extends BaseJobBean {
             }
 
             if (aoFilterScriptCode != null) {
-                log.debug(" looking for ScriptInstance with code :  [{}] ", aoFilterScriptCode);
-                ScriptInterface si = scriptInstanceService.getScriptInstance(aoFilterScriptCode);
-                if (si != null && si instanceof AccountOperationFilterScript) {
+            	if (log.isDebugEnabled()) {
+            		log.debug(" looking for ScriptInstance with code :  [{}] ", aoFilterScriptCode);
+            	}
+            	ScriptInterface si = scriptInstanceService.getScriptInstance(aoFilterScriptCode);
+                if (si instanceof AccountOperationFilterScript) {
                     return (AccountOperationFilterScript) si;
                 }
             }
@@ -366,4 +364,5 @@ public class SepaDirectDebitJobBean extends BaseJobBean {
         }
         return null;
     }
+
 }
